package netty;
option java_package = "com.kalusyu.nettypractice.authority.chapter8";
option java_outer_classname = "SubscribeReqProto";

message SubscribeReq{
  required int32 subReqID = 1;
  required string userName = 2;
  required string productName = 3;
  required string address = 4;

}